# Awesome-Social-Intelligence-Modeling-System

./: .gitignore  COMPLETE_LIST.md  README.md  paper_database_for_survey.csv  paper_database_for_survey_after_read.csv  paper_database_for_survey_old.csv  paper_database_for_survey_坏了.csv  paper_database_for_survey_奇怪.csv  submit.py  submit_template.json  submit_templateJ.json  submit_templateZ.json
AI_assistant_review_tools/: README.md  cache_backup.pkl  config.ini  paperCopilot-paperReviewBrowser.py  pyproject.toml  session.pkl
AI_assistant_review_tools/AI-classifier report sample/: 10th_AI_Classifier_Data_1773763815834.json  10th_AI_Classifier_Report_1773763799510.html  11th_AI_Classifier_Data_1773811719289.json  11th_AI_Classifier_Report_1773811703980.html  12th_failed_AI_Classifier_Data_1773817473848.json  12th_failed_AI_Classifier_Report_1773817451390.html  13th_AI_Classifier_Data_1774104819788.json  13th_AI_Classifier_Report_1774104806850.html  14th_AI_Classifier_Data_1774156523046.json  14th_AI_Classifier_Report_1774156512443.html  15_AI_Classifier_Data_1774365078094.json  15_AI_Classifier_Report_1774365065315.html
AI_assistant_review_tools/core/: llm_service.py  translation.py
AI_assistant_review_tools/saves/: aaai2023.sav  aaai2024.sav  aaai2025.sav  acl2023.sav  acl2024.sav  acl2025.sav  acmmm2024.sav  coling2024.sav  coling2025.sav  cvpr2023.sav  cvpr2024.sav  cvpr2025.sav  eccv2024.sav  emnlp2023.sav  emnlp2024.sav  iccv2023.sav  iccv2025.sav  iclr2023.sav  iclr2024.sav  iclr2025.sav  iclr2026.sav  iclr2026N.sav  icml2023.sav  icml2024.sav  icml2025.sav  (+7 more)
(+190 files in other folders)
