[project]
name = "paperreviewbrowser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "googletrans==3.1.0a0",
    "python-levenshtein>=0.27.3",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "tencentcloud-sdk-python>=3.0.1489",
]
